# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  21 Mar 2005; Martin Schlemmer <azarah@gentoo.org>:

    Fix tracing for current service as list_depend_trace() was removed.

  20 Mar 2005; Martin Schlemmer <azarah@gentoo.org>:

    Take sort_services function from bug #70009, and fix the removing of a
    service from a array properly by using unset.  Use this instead of the
    trace_* stuff, and fixup shutdown order.

  19 Mar 2005; Mike Frysinger <vapier@gentoo.org>:

    Make sure we mount svcdir with 0755 and not 0644 #85888.

  15 Mar 2005; Martin Schlemmer <azarah@gentoo.org>:

    Export myservice when starting critical services, as its needed by
    some of the addons (dmcrypt for example).

  12 Mar 2005; Mike Frysinger <vapier@gentoo.org>:

    When shutting down, pass -h to halt too #84654 by Dmitry Karasik.

  11 Mar 2005; Roy Marples <uberlord@gentoo.org>:

    Prepend rc-daemon.sh functions with rc_ to avoid name conflicts

  11 Mar 2005; Martin Schlemmer <azarah@gentoo.org>:

    Make sure the last test in init.d/modules do not bork the return
    value of the script if not true.

  10 Mar 2005; Mike Frysinger <vapier@gentoo.org>:

    Add udev/selinux support by Chris PeBenito #84337.

  10 Mar 2005; Martin Schlemmer <azarah@gentoo.org>:

    The system() stuff in *depends.awk should be dosystem().

* rc-scripts 1.7.0 (10 Mar 2005)

  09 Mar 2005; Roy Marples <uberlord@gentoo.org>:

    changed from $( cat ${file} ) to $( < ${file ) in net-scripts

    fixed ChangeLog corruption

    rc-daemon.sh now works with the env program

  08 Mar 2005; Roy Marples <uberlord@gentoo.org>:

    rc-services.sh now does a /sbin/depscan.sh -u if we have not got
    our deptree loaded

    removed net_start/stop function from net.lo, bridge and bonding

    net.lo now supports depend() per interface like so
    depend_br0() { need net.eth0 net.eth1 }
